--- a/index.html
+++ b/index.html
@@ -1150,33 +1150,45 @@ cursor: pointer;
 }
 
 /* ✅ 탑바 아래 라인에 붙는 삼각형 버튼 (tab2에서만 표시) */
+/* 탑바 안에서 삼각형을 '탑바 하단 라인'에 붙임 */
+.topBar{ position: fixed; } /* 이미 있지만 혹시 몰라 명시 */
+
 #threeToggleBtn{
-  position: fixed;
-  left: 50%;
-  top: calc(env(safe-area-inset-top) + var(--topBarH) - 1px);
-  transform: translateX(-50%) translateY(-8px);  /* ✅ 위로 8px 올림 */
-  width: 390px;
-  max-width: 100%;
+  all: unset;
+  position: absolute;
 
-  display: none;                 /* ✅ 기본 숨김 */
-  justify-content: flex-start;
-  padding-left: 10%;             /* ✅ 왼쪽 1/10 지점 */
+  /* ✅ 왼쪽 10% 지점 */
+  left: 10%;
+  transform: translateX(-50%);
 
-  height: 0;                     /* ✅ 선에 붙는 느낌 */
-  border: none;
-  background: transparent;
+  /* ✅ 탑바 하단 라인에 딱 붙게 (border-bottom 바로 아래로 살짝 걸치기) */
+  bottom: -10px;
+
+  width: 28px;
+  height: 28px;
+
+  display: none;                 /* 기본 숨김 */
+  align-items: center;
+  justify-content: center;
 
   color: #777;
   font-size: 16px;
   line-height: 1;
 
-  z-index: 99998;
-  pointer-events: auto;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  z-index: 999999;               /* 탑바 안에서 최상단 */
 }
 
-/* 눌림 효과 */
-#threeToggleBtn:active{
-  transform: translateX(-50%) translateY(-8px) scale(0.95);
+/* ✅ 눌러도 "버튼 위치"는 안 움직이고, 아이콘만 살짝 줄어듦 */
+#threeToggleBtn .chev{
+  display: block;
+  transform: translateY(-1px);   /* 미세하게 위로(원하면 0px로) */
+  transform-origin: center;
+}
+
+#threeToggleBtn:active .chev{
+  transform: translateY(-1px) scale(0.95);
 }
 
    
