--- a/index.html
+++ b/index.html
@@ -1151,29 +1151,26 @@ cursor: pointer;
 
 /* ✅ 탑바 아래 라인에 붙는 삼각형 버튼 (tab2에서만 표시) */
 /* tab2 안에서만, 탑바 바로 아래에 붙는 '스크롤 영역용' */
+/* tab2 안에서만, 탑바 바로 아래에 붙는 '스크롤 영역용' */
 .threeStickyRow{
   position: sticky;
-  top: calc(var(--topBarH) + env(safe-area-inset-top) - 182px);
+  top: calc(var(--topBarH) + env(safe-area-inset-top));
   z-index: 50;
-
-  margin-top: 0;          /* ✅ 아래 2줄은 이제 필요없음 */
-  padding-top: 0;
-
   height: 0;
   pointer-events: none;
 }
 
-/* 버튼만 클릭 가능 */
+/* ✅ 여기만 수정 */
 #threeToggleBtn{
   pointer-events: auto;
-
   position: relative;
+
   left: 10%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -14px);  /* ✅ X만 있던거 → Y도 추가 */
+  /* 또는 top: -14px; 해도 됨 */
 
   width: 28px;
   height: 28px;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1183,10 +1180,7 @@ cursor: pointer;
   color: #777;
   font-size: 16px;
   line-height: 1;
-
-  -webkit-tap-highlight-color: transparent;
 }
-
 /* 눌러도 위치 안 움직이게: 아이콘만 scale */
 #threeToggleBtn .chev{ display:block; transform: translateY(-1px); }
 #threeToggleBtn:active .chev{ transform: translateY(-1px) scale(0.95); }
