--- a/index.html
+++ b/index.html
@@ -1149,9 +1149,7 @@ cursor: pointer;
   color: #666;
 }
 /* ✅ 3대 탭(tab2)만 위로 땡기기 */
-#tab2{
-  margin-top: calc(-1 * var(--topBarH));
-}
+#tab2{ margin-top: -48px; }   /* 예: 절반만 */
 /* ✅ 탑바 아래 라인에 붙는 삼각형 버튼 (tab2에서만 표시) */
 /* tab2 안에서만, 탑바 바로 아래에 붙는 '스크롤 영역용' *//* ✅ 탑바 바로 아래에 딱 붙는 '고정' 삼각형 버튼 */
 .threeStickyRow{
