--- a/index.html
+++ b/index.html
@@ -1778,6 +1778,14 @@ function loadAllFromLocal(){
   records.dead  = Array.isArray(r.dead)  ? r.dead  : [];
   records.ohp = Array.isArray(r.ohp) ? r.ohp : [];
 
+  function makeKey(w, r){
+  return `${w}__${r}`;
+}
+
+function formatSetLine(w, r, sets){
+  return `${w}kg × ${r}회 × ${sets}set`;
+}
+
   renderActiveBox();
 
   // 달력
@@ -1930,7 +1938,7 @@ function renderAccessoryRecords(exerciseName) {
   .reverse()
   .map(r => `
     <div class="set record-set" data-id="${r.id}">
-      ${r.weight}kg × ${r.reps}회
+      ${formatSetLine(p.weight, p.reps, p.sets)}
     </div>
   `)
   .join("");
@@ -2132,7 +2140,19 @@ function renderActiveBox(){
     // ✅ 여기부터가 "배치 변경" 핵심
     boxEl.innerHTML = dates.map(date => {
       // 🔥 같은 날짜의 세트들: 기존처럼 "최신이 아래로" 보이게 reverse 유지
-      const dayRecords = grouped[date].slice().reverse();
+      const raw = grouped[date].slice().reverse(); 
+// raw는 "최신이 아래로" 보이게 하려고 reverse 해둔 상태 유지
+
+// ✅ 연속 동일 (weight,reps) 묶기
+const packed = [];
+for (const r of raw){
+  const last = packed[packed.length - 1];
+  if (last && makeKey(last.weight, last.reps) === makeKey(r.weight, r.reps)){
+    last.sets += 1;
+  } else {
+    packed.push({ weight: r.weight, reps: r.reps, sets: 1, ids: [r.firestoreId ? r.firestoreId : ('local_' + r.localId)] });
+  }
+}
 
       return `
         <div style="margin-bottom:10px;">
@@ -2150,7 +2170,7 @@ function renderActiveBox(){
                   cursor: pointer;
                 "
               >
-                ${r.weight}kg × ${r.reps}회
+               ${formatSetLine(p.weight, p.reps, p.sets)}
               </div>
 
               <!-- ✅ (오른쪽) 날짜: 첫 줄에만 표시 / 고정폭 90px 유지 -->
@@ -3048,23 +3068,26 @@ function getAccessorySummary(exerciseName) {
   const list = accRecordsByExercise[exerciseName] || [];
   if (!list.length) return '기록 없음';
 
-  // createdAt 기준 최신순 정렬
+  // createdAt 기준 최신순
   const sorted = [...list].sort((a, b) => (b.createdAt || 0) - (a.createdAt || 0));
-
-  // 최신 날짜(첫 레코드의 date)
   const latestDate = sorted[0].date;
   if (!latestDate) return '기록 없음';
 
-  // 최신 날짜에 해당하는 세트만 모으기
-  const sameDateSets = sorted.filter(r => r.date === latestDate);
+  // 최신 날짜만
+  const sameDateSets = sorted.filter(r => r.date === latestDate).slice().reverse();
 
-  // 같은 날짜 내에서는 "저장 순서(누적)"로 보이게 최신을 아래로
-  const lines = sameDateSets
-    .slice()
-    .reverse()
-    .map(r => `${r.weight}kg × ${r.reps}회`);
+  // ✅ 연속 동일 묶기
+  const packed = [];
+  for (const r of sameDateSets){
+    const last = packed[packed.length - 1];
+    if (last && `${last.weight}__${last.reps}` === `${r.weight}__${r.reps}`){
+      last.sets += 1;
+    } else {
+      packed.push({ weight: r.weight, reps: r.reps, sets: 1 });
+    }
+  }
 
-  // 줄바꿈 렌더링
+  const lines = packed.map(p => `${p.weight}kg × ${p.reps}회 × ${p.sets}set`);
   return `${latestDate}<br>${lines.join('<br>')}`;
 }
 
