--- a/index.html
+++ b/index.html
@@ -1717,6 +1717,12 @@ function formatKgSmart(n){
   return s.endsWith(".0") ? s.slice(0, -2) : s;  // 필요할 때만 소수점
 }
 
+function makeKey(w, r){ return `${round1(w)}__${parseInt(r,10)}`; }
+
+function formatSetLine(w, r, sets){
+  return `${formatKgSmart(w)}kg × ${parseInt(r,10)}회 × ${sets}set`;
+}
+
 /* 페이드 텍스트 유틸 */
 function fadeOutElem(el, timeout=1000, fadeDur=800){
     el.style.opacity = 1;
@@ -2130,45 +2136,58 @@ function renderActiveBox(){
       .sort((a, b) => b.localeCompare(a));
 
     // ✅ 여기부터가 "배치 변경" 핵심
-    boxEl.innerHTML = dates.map(date => {
-      // 🔥 같은 날짜의 세트들: 기존처럼 "최신이 아래로" 보이게 reverse 유지
-      const dayRecords = grouped[date].slice().reverse();
+ // ✅ 여기부터: 날짜별 → "연속 동일 세트" 묶어서 렌더
+boxEl.innerHTML = dates.map(date => {
+  // 같은 날짜의 세트들: 오래된 것 → 최신(=최신이 아래)
+  const raw = grouped[date].slice().reverse();
 
-      return `
-        <div style="margin-bottom:10px;">
-          ${dayRecords.map((r, idx) => `
-            <!-- ✅ 한 줄을 '기록(왼쪽) / 날짜(오른쪽)' 2컬럼처럼 고정 -->
-            <div style="display:flex; align-items:center; line-height:1.6;">
-              
-              <!-- ✅ (왼쪽) 기록: 삭제 long-press 타겟(.record-line)은 그대로 유지 -->
-              <div
-                class="record-line"
-                data-id="${r.firestoreId ? r.firestoreId : ('local_' + r.localId)}"
-                style="
-                  flex: 1;
-                  text-align: left;       /* 🔥 왼쪽 정렬 */
-                  cursor: pointer;
-                "
-              >
-                ${r.weight}kg × ${r.reps}회
-              </div>
+  // ✅ 연속 동일(무게/횟수) 묶기
+  const packed = [];
+  for (const r of raw) {
+    const last = packed[packed.length - 1];
 
-              <!-- ✅ (오른쪽) 날짜: 첫 줄에만 표시 / 고정폭 90px 유지 -->
-              <div style="
-                width: 90px;             /* 🔥 네가 말한 '고정' */
-                text-align: right;       /* 🔥 오른쪽 정렬 */
-                color: rgba(255,255,255,0.75); /* 날짜는 메타라 살짝 톤 다운(원하면 빼도 됨) */
-                font-size: 13px;
-              ">
-                ${idx === 0 ? date : ''}
-              </div>
+    const rid = r.firestoreId ? r.firestoreId : ("local_" + r.localId);
 
-            </div>
-          `).join('')}
-          <div style="border-bottom:1px solid rgba(255,255,255,0.12); margin-top:6px;"></div>
+    if (last && makeKey(last.weight, last.reps) === makeKey(r.weight, r.reps)) {
+      last.sets += 1;
+      last.ids.push(rid);
+    } else {
+      packed.push({
+        weight: r.weight,
+        reps: r.reps,
+        sets: 1,
+        ids: [rid]
+      });
+    }
+  }
+
+  return `
+    <div style="margin-bottom:10px;">
+      ${packed.map((p, idx) => `
+        <div style="display:flex; align-items:center; line-height:1.6;">
+          <div
+            class="record-line"
+            data-id="${p.ids[p.ids.length - 1]}"          <!-- 임시: 일단 하나만 -->
+            data-ids="${p.ids.join(',')}"                 <!-- 나중 삭제용 -->
+            style="flex:1; text-align:left; cursor:pointer;"
+          >
+            ${formatSetLine(p.weight, p.reps, p.sets)}
+          </div>
+
+          <div style="
+            width:90px;
+            text-align:right;
+            color:rgba(255,255,255,0.75);
+            font-size:13px;
+          ">
+            ${idx === 0 ? date : ''}
+          </div>
         </div>
-      `;
-    }).join('');
+      `).join('')}
+      <div style="border-bottom:1px solid rgba(255,255,255,0.12); margin-top:6px;"></div>
+    </div>
+  `;
+}).join('');
 }
 renderActiveBox();
 
